--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.21.0",
     "cloudinary": "^2.5.0",
+    "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "toastify-js": "^1.12.0"
